[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jks-navigator"
version = "0.1.0"
description = "Pure Python JKS keytool-compatible utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[project.scripts]
jksnav = "pyjakey.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
